# warehouse_system

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHANGELOG_EN.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.prod  MCP_MIGRATION.md  PRODUCT_DETAIL_UPDATE.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  README_EN.md  TESTS_MIGRATION.md  docker-compose.multi.yml  docker-compose.prod.yml  docker-compose.prod.yml.example  docker-compose.yml  pyproject.toml  run_backend.py  start.ps1  start.sh  仓管 prompt 记录.md
backend/: Dockerfile  Dockerfile.prod  app.py  database.py  db.py  deps.py  fuzzy_match.py  mcp_manager.py  mcp_shared_runtime.py  metadata.py  migrate_data.py  models.py  resource_router.py  warehouse.db
deploy/: Caddyfile  deploy.sh  docker-compose.server.yml  docker-entrypoint.sh  init_demo_db.py  nginx.conf.example  reset_data.sh
docs/: CLAUDE_DESKTOP_CONFIG.md  DEPLOYMENT.md  MCP_External_System_Integration.md  MCP_Server_Development_Practice.md  RELEASE-2026-07-18-face-option3.md  TESTING_GUIDE.md  WMS_Provider_Development.md  Warehouse_System_Guide.md  face-integration-spec.md  fuzzy_match_fixes.md  plan-face-session-device-pull.md  系统介绍.md
e2e_voice_mcp/: .gitignore  README.md  conftest.py  headless_container.py  probe.py  pytest.ini  run_backend.sh  run_bridge.sh  test_face_speaker_injection.py  test_smoke_official.py  test_voice_mcp_e2e.py  test_voice_official.py  voice_inject.py
frontend/: Dockerfile  Dockerfile.prod  STYLE_GUIDE.md  app.js  i18n.js  index.html  nginx.conf  package-lock.json  package.json  product_detail.html  product_detail.js  server.py  style.css  tailwind.config.js  vite.config.js
mcp/: MCP_README.md  MCP_README_EN.md  mcp_pipe.py  (+6 more)
(+202 files in other folders)
