[project]
name = "warehouse-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.21.0",
    "requests>=2.32.5",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    # 生产安全依赖
    "bcrypt>=4.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
