[project]
name = "warehouse-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=12.0",
    "python-socks[asyncio]>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.21.0",
    "requests>=2.32.5",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    # 模糊匹配依赖
    "rapidfuzz>=3.0.0",
    "pypinyin>=0.50.0",
    # 生产安全依赖
    "bcrypt>=4.1.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "pymysql>=1.1.3",
    # WE2 face embedding simulator (bit-exact mirror of on-device pipeline)
    "ai-edge-litert>=2.1.5",
    "Pillow>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
